# infolang-autogen

./: README.md  pyproject.toml
examples/: quickstart.py
src/infolang_autogen/: __init__.py  _client.py  _format.py  memory.py  tools.py
tests/: conftest.py  test_client.py  test_format.py  test_live.py  test_memory.py  test_package.py  test_tools.py
